# pii_masker

./: .pre-commit-config.yaml  README.md  app.py  mlrun.env  pii_recognizer.ipynb  project.yaml  pyproject.toml  requirements.txt
0.0.1/src/: function.yaml  item.yaml  pii_recognizer.ipynb  pii_recognizer.py  test_pii_recognizer.py
data/: pii.html  pii.txt  pii_o.html  pii_o.txt  pii_o.txt_stats.json  pii_o_stats.json
pii_anonymizer/recognizer/: flair_recognizer.py
src/: app.py  cli.py  process.py  project.yaml  project_setup.py
src/recognizer/: flair_recognizer.py  spacy_pattern_recognizer.py  spacy_recognizer.py
